--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:8pEOTt3vv55Bc6bpHmFDS5TWZM8N76tSopsJ2KC10UA=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://local.foo.com
 
 LOG_CHANNEL=stack
 
