--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:8pEOTt3vv55Bc6bpHmFDS5TWZM8N76tSopsJ2KC10UA=
+APP_KEY=base64:rff3ewNJ6S9U1QnPeGWQ16Qt3b4ueFAwAwwoyD6+ebE=
 APP_DEBUG=true
 APP_URL=http://local.foo.com
 
@@ -33,8 +33,8 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
-MAIL_USERNAME=khuongxuantruong@gmail.com
-MAIL_PASSWORD=edpfmolivjmpryob
+MAIL_USERNAME=truongkx@lifull-tech.vn
+MAIL_PASSWORD=gdusgcnucizfrzgv
 MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
