--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=GID
 APP_ENV=local
 APP_KEY=base64:rff3ewNJ6S9U1QnPeGWQ16Qt3b4ueFAwAwwoyD6+ebE=
 APP_DEBUG=true
@@ -32,10 +32,14 @@ REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
+MAIL_PORT=465
+MAIL_ENCRYPTION=ssl
 MAIL_USERNAME=truongkx@lifull-tech.vn
-MAIL_PASSWORD=gdusgcnucizfrzgv
-MAIL_ENCRYPTION=tls
+MAIL_PASSWORD=aspmamyubhergsik
+MAIL_FROM_ADDRESS=truongkx@lifull-tech.vn
+MAIL_FROM_NAME=GID
+MAIL_NOTIFICATION_ADDRESS=khuongxuantruong@gmail.com
+MAIL_NOTIFICATION_NAME=TRUONG
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
