--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "guzzlehttp/guzzle": "^6.4",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
-        "laravel/ui": "^1.1"
+        "laravel/ui": "^1.1",
+        "mariuzzo/laravel-js-localization": "^1.5"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
