--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ APP_KEY=base64:rff3ewNJ6S9U1QnPeGWQ16Qt3b4ueFAwAwwoyD6+ebE=
 APP_DEBUG=true
 APP_URL=http://local.foo.com
 
+CURRENCY_EXCHANGE_RATE_USD=23203.68
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
