--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "sass-loader": "7.*",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "tui-date-picker": "^4.0.2",
+        "tui-dom": "^3.0.0"
     }
 }
